<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

             <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/sina_login_btn"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_button"
                android:backgroundTint="@color/primary"
                android:text="@string/weibo_signup"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/qq_login_btn"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/login_qq_button"
                android:text="@string/qq_signup"
                android:textColor="@android:color/white" />
        </RelativeLayout>
        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/signup_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@drawable/material_button"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/primary_text" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_account"/>
            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/selectable_item_background"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
